fix(yutai-memo): keep mobile status controls right aligned

--- a/app/tools/yutai-memo/ToolClient.module.css
+++ b/app/tools/yutai-memo/ToolClient.module.css
@@ -170,11 +170,11 @@
 
   .cardSide {
     width: 100%;
-    align-items: flex-start;
+    align-items: flex-end;
   }
 
   .statusRow {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 }
 .small {
